# auto-sec-ops

./: (!!!)_git_clone-build.sh  (!!!)_project-urls.sh  (!!!)_runme.sh  .gitignore  README.md  _env_python_setup.sh  _git_clone.sh  _parse_yaml.sh  _run_dev_lab.sh  projects.yaml  techlinks.md  test.sh
bash/shell_scripts/: (!!!)__git_repo_clone.sh  (!!!)_clone-build.sh
docker-compose-lab/: docker-compose-gitlabce  docker-compose-monitoring.yml  docker-compose-mysql  docker-compose-proxy.yaml
docker-compose-lab/configs/: prometheus.yml
docker-mfti/: DOCKER-MFTI.md  Dockerfile
pycjira/: pyproject.toml
pycjira/pycjira/: pycjira.py
scriptor/: README.md  _build.sh  _env_python_setup.sh  _init_venv.sh  _install.sh  requirements.txt  scriptor.ipynb  setup.cfg  setup.py  start.sh
scriptor/src/scriptor/: __init__.py  k8s.py  scriptor.py
scriptor/src/scriptor/atlassian/: file_upload.py  jira_issue.py  jira_utility.py  jirautil.py
scriptor/src/scriptor/config/: sam_settings.py  scriptor_config.py
scriptor/src/scriptor/kubernetes/: k8s.py
scriptor/src/scriptor/modules/atlassian/: atlassian_exception.py  common_constants.py  confutil.py  gitupdate.py  jira_2_xls.py  jira_helpers.py  jira_reports.py
scriptor/src/scriptor/modules/kubernetes/components/: pod.py
