[tool.poetry]
name = "pycjira"
version = "0.1.0"
description = "Python Complete Jira library/wrapper."
authors = ["Dmitrii Gusev <dmitry.ed.gusev@gmail.com>"]
readme = "README.md"
# - usually package name is tool.poetry.name - specify here in case it's different
packages = [{include = "pycjira"}]

[tool.poetry.dependencies]
python = "^3.10"
jira = "^3.6.0"
logging = "^0.4.9.6"
loguru = "^0.7.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
